@@ -14,6 +14,7 @@ Pint Changelog
 - Fix a recursion error that would be raised when passing quantities to `cond` and `x`.
   (Issue #1510, #1530)
 - Update test_non_int tests for pytest.
+- Better support for uncertainties (See #1611, #1614)
 
 0.19.2 (2022-04-23)
 -------------------
